Update and rename general_feedback.md to general_feedback.yaml

--- a/.github/ISSUE_TEMPLATE/general_feedback.yaml
+++ b/.github/ISSUE_TEMPLATE/general_feedback.yaml
@@ -1,7 +1,4 @@
----
 name: General Feedback
 about: Give some informal feedback.
-title: ''
-labels: 'feedback'
-assignees: ''
----
+labels: 
+ - feedback
