--- a/.github/ISSUE_TEMPLATE/general_feedback.yaml
+++ b/.github/ISSUE_TEMPLATE/general_feedback.yaml
@@ -1,5 +1,5 @@
 name: General Feedback
-about: Give some informal feedback.
+description: Give some informal feedback.
 labels: 
  - feedback
 body:
