--- a/.github/ISSUE_TEMPLATE/general_feedback.yaml
+++ b/.github/ISSUE_TEMPLATE/general_feedback.yaml
@@ -7,3 +7,10 @@ body:
     attributes:
       value: |
         Thanks for taking the time to give this feedback!
+  - type: textarea
+    id: what-happened
+    attributes:
+      label: W?
+      description: Also tell us, whatever comes to your mind!
+      placeholder: What you liked, what did not work, what is difficult to understan....
+      value: "- ..."        
