--- a/.github/ISSUE_TEMPLATE/feature_request.yaml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yaml
@@ -10,7 +10,7 @@ body:
     attributes:
       value: |
         **Thanks :heart: for taking the time to fill out this feature request report!**
-        We kindly ask that you search to see if an issue [already exists]([https://github.com/wandb/wandb/issues?q=is%3Aissue+sort%3Acreated-desc+](https://github.com/Dream-beez/issue-tracker/issues?q=is%3Aopen+is%3Aissue+label%3Aenhancement)) for your feature.
+        We kindly ask that you search to see if an issue [already exists](https://github.com/Dream-beez/issue-tracker/issues?q=is%3Aopen+is%3Aissue+label%3Aenhancement) for your feature.
 
   - type: textarea
     attributes:
